デフォルトイラスト変更

--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,11 @@
                   <img src="assets/images/item2.png" alt="">
                 </div>
                 <div class="right-upper-image">
-                  <img src="greff-assets/images/call-center.png" alt="">
+                  <img src="assets/images/item2.png" alt="">
                 </div>
               </div>
               <div class="lower">
-                <img src="greff-assets/images/supermarket-clerk.png" alt="">
+                <img src="assets/images/item2.png" alt="">
               </div>
             </div>
             <div class="column first-view-center">
@@ -55,11 +55,11 @@
                   <img src="assets/images/item1.png" alt="">
                 </div>
                 <div class="right-upper-image">
-                  <img src="greff-assets/images/cleaning-staff.png" alt="">
+                  <img src="assets/images/item1.png" alt="">
                 </div>
               </div>
               <div class="lower">
-                <img src="greff-assets/images/caffe-shop.png" alt="">
+                <img src="assets/images/item1.png" alt="">
               </div>
             </div>
           </div>
@@ -74,11 +74,11 @@
                     <img src="assets/images/item2.png" alt="">
                   </div>
                   <div class="right-upper-image">
-                    <img src="greff-assets/images/call-center.png" alt="">
+                    <img src="assets/images/item2.png" alt="">
                   </div>
                 </div>
                 <div class="lower">
-                  <img src="greff-assets/images/supermarket-clerk.png" alt="">
+                  <img src="assets/images/item2.png" alt="">
                 </div>
               </div>
               <div class="column first-view-right">
@@ -87,11 +87,11 @@
                     <img src="assets/images/item1.png" alt="">
                   </div>
                   <div class="right-upper-image">
-                    <img src="greff-assets/images/cleaning-staff.png" alt="">
+                    <img src="assets/images/item1.png" alt="">
                   </div>
                 </div>
                 <div class="lower">
-                  <img src="greff-assets/images/caffe-shop.png" alt="">
+                  <img src="assets/images/item1.png" alt="">
                 </div>
               </div>
             </div>
