--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/style-for-worker.css">
-    <link rel="stylesheet" href="assets/css/worker.css">   
+    <link rel="stylesheet" href="assets/css/worker.css">
+    <link rel=”icon” href=assets/favicon/favicon.ico”>
     <title>フィーリングカップル | モテマゲドン</title>
   </head>
   <body>
