ファビコン反映された

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/style-for-worker.css">
     <link rel="stylesheet" href="assets/css/worker.css">
-    <link rel=”icon” href=assets/favicon/favicon.ico”>
+    <link rel="icon" href="assets/favicon/favicon.ico">
     <title>フィーリングカップル | モテマゲドン</title>
   </head>
   <body>
