character画像を変更

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
             <div class="column first-view-left top-pc">
               <div class="upper">
                 <div class="left-upper-image">
-                  <img src="assets/images/item2.png" alt="">
+                  <img src="assets/images/character/character1.png" alt="">
                 </div>
                 <div class="right-upper-image">
-                  <img src="assets/images/item2.png" alt="">
+                  <img src="assets/images/character/character2.png" alt="">
                 </div>
               </div>
               <div class="lower">
@@ -53,10 +53,10 @@
             <div class="column first-view-right top-pc">
               <div class="upper">
                 <div class="left-upper-image">
-                  <img src="assets/images/item1.png" alt="">
+                  <img src="assets/images/character/character3.png" alt="">
                 </div>
                 <div class="right-upper-image">
-                  <img src="assets/images/item1.png" alt="">
+                  <img src="assets/images/character/character4.png" alt="">
                 </div>
               </div>
               <div class="lower">
@@ -72,10 +72,10 @@
               <div class="column first-view-left">
                 <div class="upper">
                   <div class="left-upper-image">
-                    <img src="assets/images/item2.png" alt="">
+                    <img src="assets/images/character/character1.png" alt="">
                   </div>
                   <div class="right-upper-image">
-                    <img src="assets/images/item2.png" alt="">
+                    <img src="assets/images/character/character2.png" alt="">
                   </div>
                 </div>
                 <div class="lower">
@@ -85,10 +85,10 @@
               <div class="column first-view-right">
                 <div class="upper">
                   <div class="left-upper-image">
-                    <img src="assets/images/item1.png" alt="">
+                    <img src="assets/images/character/character3.png" alt="">
                   </div>
                   <div class="right-upper-image">
-                    <img src="assets/images/item1.png" alt="">
+                    <img src="assets/images/character/character4.png" alt="">
                   </div>
                 </div>
                 <div class="lower">
